Integrate bootstrap into parent theming

--- a/_config.yml
+++ b/_config.yml
@@ -26,14 +26,19 @@ markdown: kramdown
 plugins:
   - jekyll-feed
 
+# Allow sass to use node_modules
+sass:
+  load_paths:
+      - _sass
+      - node_modules
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
